[regression] gstreamer-vaapi decode/encode tests fail on iHD driver since 176bbce9
gstreamer-vaapi decode/encode tests fail on iHD driver since: (same tests pass on i965 driver)
commit 176bbce9 Author: He Junyan junyan.he@hotmail.com Date: Wed Nov 14 13:11:56 2018 +0800
plugins: modify image check of extract_allowed_surface_formats.
Test command for re-producing the failure: GST_VAAPI_ALL_DRIVERS=1 LIBVA_DRIVER_NAME=iHD gst-launch-1.0 -vf filesrc location=input.264 ! h264parse ! vaapih264dec ! videoconvert ! video/x-raw,format=I420 ! checksumsink2 file-checksum=false frame-checksum=false plane-checksum=false dump-output=true dump-location=test.yuv
software stack: libva (master) heads/master-0-g2852675 https://github.com/01org/libva gmmlib (master) heads/master-0-g10ad15a https://github.com/intel/gmmlib intel-media-driver (master) heads/master-0-g59763808 https://github.com/intel/media-driver gstreamer (master) heads/master-0-gd3fa67c08 https://anongit.freedesktop.org/git/gstreamer/gstreamer gst-plugins-base (master) heads/master-0-gdb1722c9c https://anongit.freedesktop.org/git/gstreamer/gst-plugins-base gst-plugins-good (master) heads/master-0-ge9495c55f https://anongit.freedesktop.org/git/gstreamer/gst-plugins-good gst-plugins-bad (master) heads/master-0-g1f562870e https://anongit.freedesktop.org/git/gstreamer/gst-plugins-bad gst-checksumsink (master) heads/master-0-g36eafdc https://github.com/ceyusa/gst-checksumsink